--- a/DjangoFredagTest/web.debug.config
+++ b/DjangoFredagTest/web.debug.config
@@ -9,7 +9,10 @@
   </appSettings>
   <system.web>
     <!-- Required for websockets. -->
-    <httpRuntime targetFramework="4.5" xdt:Transform="Insert" />
+    <httpRuntime targetFramework="4.5" xdt:Transform="Insert"  />
+    <customErrors mode="Off"  xdt:Transform="Insert"/>
+    <compilation debug="true"  xdt:Transform="Insert" />
+    
   </system.web>
   <system.webServer>
     <handlers>
