--- a/DjangoFredagTest/web.config
+++ b/DjangoFredagTest/web.config
@@ -1,20 +1,16 @@
 <?xml version="1.0"?>
 
 <configuration>
-  <system.diagnostics>
-    <trace>
-      <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
-          <filter type="" />
-        </add>
-      </listeners>
-    </trace>
-  </system.diagnostics>
+  
   <appSettings>
+     <!--<add key="WSGI_ALT_VIRTUALENV_HANDLER" value="dugga.wfastcgi.wsgi_app" />-->
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="%ROOTDIR%\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="%ROOTDIR%" />
+    <add key="PYTHONPATH" value="%ROOTDIR%;%ROOTDIR%\env\Lib\Site-packages" />
+    <add key="WSGI_LOG" value="%ROOTDIR%\log.txt" />
+
     <add key="DJANGO_SETTINGS_MODULE" value="DjangoFredagTest.settings" />
   </appSettings>
   <system.web>
