--- a/DjangoFredagTest/web.config
+++ b/DjangoFredagTest/web.config
@@ -19,7 +19,14 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
-      <add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="%INTERPRETERPATH%|%WFASTCGIPATH%" resourceType="Unspecified" requireAccess="Script" />
+      <!--<add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="%INTERPRETERPATH%|%WFASTCGIPATH%" resourceType="Unspecified" requireAccess="Script" />-->
+      <add name="Python FastCGI"
+            path="*"
+            verb="*"
+            modules="FastCgiModule"
+            scriptProcessor="D:\Python27\python.exe|D:\Python27\Scripts\wfastcgi.py"
+            resourceType="Unspecified"
+            requireAccess="Script" />
     </handlers>
     <rewrite>
       <rules>
