--- a/DjangoFredagTest/web.config
+++ b/DjangoFredagTest/web.config
@@ -6,10 +6,10 @@
      <!--<add key="WSGI_ALT_VIRTUALENV_HANDLER" value="dugga.wfastcgi.wsgi_app" />-->
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
 
-    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="%ROOTDIR%\env\Scripts\activate_this.py" />
+    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="d:\home\site\wwwroot\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="%ROOTDIR%;%ROOTDIR%\env\Lib\Site-packages" />
-    <add key="WSGI_LOG" value="%ROOTDIR%\log.txt" />
+    <add key="PYTHONPATH" value="d:\home\site\wwwroot;d:\home\site\wwwroot\env\Lib\Site-packages" />
+    <add key="WSGI_LOG" value="d:\home\site\wwwroot\log.txt" />
 
     <add key="DJANGO_SETTINGS_MODULE" value="DjangoFredagTest.settings" />
   </appSettings>
