--- a/web.config
+++ b/web.config
@@ -9,7 +9,7 @@
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
     <add key="PYTHONPATH" value="%ROOTDIR%;%ROOTDIR%\env\Lib\Site-packages" /> <!--Pythonpath inställt  porjectet-->
     <add key="DJANGO_SETTINGS_MODULE" value="dugga.settings.azure_server_dev" />
-    <add key="WSGI_LOG" value="%ROOTDIR%\log.txt" />
+    <add key="WSGI_LOG" value="d:\home\LogFiles\PythonLog.txt" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
