--- a/web.config
+++ b/web.config
@@ -4,10 +4,10 @@
   <appSettings>
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <!--<add key="WSGI_ALT_VIRTUALENV_HANDLER" value="dugga.wfastcgi.wsgi_app" />-->
-    
+    <!-- Ändring -->
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="%ROOTDIR%\env\Scripts\activate_this.py" /> 
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="%ROOTDIR%;%ROOTDIR%\env\Lib\Site-packages" /> <!--Pythonpath inställt  porjectet-->
+    <add key="PYTHONPATH" value="d:\home\site\wwwroot;d:\home\site\wwwroot\env\Lib\Site-packages" /> <!--Pythonpath inställt  porjectet-->
     <add key="DJANGO_SETTINGS_MODULE" value="dugga.settings.azure_server_dev" />
     <add key="WSGI_LOG" value="d:\home\LogFiles\PythonLog.txt" />
   </appSettings>
