--- a/web.config
+++ b/web.config
@@ -5,9 +5,9 @@
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <!--<add key="WSGI_ALT_VIRTUALENV_HANDLER" value="dugga.wfastcgi.wsgi_app" />-->
     <!-- Ändring -->
-    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="d:\home\site\wwwroot\env\Scripts\activate_this.py" /> 
+    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="d:\home\site\wwwroot\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="d:\home\site\wwwroot;d:\home\site\wwwroot\env\Lib\Site-packages" /> <!--Pythonpath inställt  porjectet-->
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot;D:\home\site\wwwroot\env\Lib\site-packages" /> <!--Pythonpath inställt  porjectet-->
     <add key="DJANGO_SETTINGS_MODULE" value="DuggaCIPoc.settings." />
     <add key="WSGI_LOG" value="d:\home\LogFiles\PythonLog.txt" />
   </appSettings>
