--- a/web.config
+++ b/web.config
@@ -23,7 +23,7 @@
            path="*"
            verb="*"
            modules="FastCgiModule"
-           scriptProcessor="D:\Python27\python.exe|D:\Python27\Scripts\wfastcgi.py"
+           scriptProcessor="D:\home\Python27\python.exe|D:\home\Python27\Scripts\wfastcgi.py"
            resourceType="Unspecified"
            requireAccess="Script" />
     </handlers>
