--- a/web.config
+++ b/web.config
@@ -15,17 +15,8 @@
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
   <system.webServer>
-    
-    <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
-      <!--<add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="%INTERPRETERPATH%|%WFASTCGIPATH%" resourceType="Unspecified" requireAccess="Script" />-->
-     <add name="Python FastCGI"
-           path="*"
-           verb="*"
-           modules="FastCgiModule"
-           scriptProcessor="D:\home\Python27\python.exe|D:\home\Python27\Scripts\wfastcgi.py"
-           resourceType="Unspecified"
-           requireAccess="Script" />
+      <add name="PythonHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\home\Python27\python.exe|D:\home\Python27\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
     </handlers>
     <rewrite>
       <rules>
