--- a/web.config
+++ b/web.config
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+    <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
-    <add key="DJANGO_SETTINGS_MODULE" value="mysite.settings" />
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot;D:\home\site\wwwroot\env\Lib\site-packages" />
+    <add key="DJANGO_SETTINGS_MODULE" value="DuggaCIPoc.settings" />
     <add key="WSGI_LOG" value="d:\home\LogFiles\PythonLog.txt" />
   </appSettings>
   <system.webServer>
     <handlers>
-      <add name="PythonHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\home\Python27\python.exe|D:\home\Python27\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
+      <add name="PythonHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python27\python.exe|D:\Python27\Scripts\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
     </handlers>
     <rewrite>
       <rules>
